--- a/terminalWindow.html
+++ b/terminalWindow.html
@@ -6,19 +6,16 @@
     <title>Terminal</title>
 </head>
 <body>
-    <h1>Puertos</h1>
 
-    <div id="error"></div>
-    <div id="ports"></div>
+    <h3>COM1 Terminal</h3>
 
-    <h3>COM Terminal</h3>
-
+    
     <form>
         <div>
             <br>
             <label>Command: </label>
-            <input type="text" id="item" autofocus placeholder="<comando>">
-            <button type="submit">Send</button>
+            <input type="text" id="comando" autofocus placeholder="<comando>">
+            <button type="submit" id="send">Send</button>
             </div>
     </form>
 </body>
