--- a/terminalWindow.html
+++ b/terminalWindow.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="styles\css\styles.css">
-    <script src="terminal.js"></script>
+  <head>
+    <link rel="stylesheet" href="styles\css\styles.css" />
     <title>Terminal</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <h3>COM1 Terminal</h3>
-
-    
     <form>
-        <div>
-            <br>
-            <label>Command: </label>
-            <input type="text" id="comando" autofocus placeholder="<comando>">
-            <button type="submit" id="send">Send</button>
-            </div>
+      <div>
+        <br />
+        <label>Command: </label>
+        <input type="text" id="comando" autofocus placeholder="<comando>" />
+        <button type="submit" id="send">Send</button>
+      </div>
     </form>
-</body>
+    <script src="terminal.js"></script>
+  </body>
 </html>
