--- a/mainWindow.html
+++ b/mainWindow.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="styles\css\styles.css">
+  <head>
+    <link rel="stylesheet" href="styles\css\styles.css" />
     <title>Serialport test - ADOX</title>
-</head>
-<body>
-    <h1>Serialport Test</h1>
-</body>
+  </head>
+  <body>
+    <div id="container">
+      <h1>ADOX S.A. Serial Communication Test App</h1>
+      <p>
+        Apliación que permite la conexión a distintos puertos COM del equipo,
+        para enviar o recibir información. Esta aplicación está implementada con
+        Electron JS, JS, HTML, y Bootstrap.
+      </p>
+      <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+      </div>
+    </div>
+  </body>
 </html>
