--- a/terminalWindow.html
+++ b/terminalWindow.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="styles\css\bootstrap.min.css" />
+    <script src="styles\js\bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles\css\styles.css" />
     <title>Terminal</title>
   </head>
