Mas responsive, agregando funcionalidad

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -8,37 +8,59 @@
   <body>
     <div class="main-window">
       <div>
-        <div class="container-fluid" style="height: 945px">
-          <div class="row" style="height: 945px">
+        <div class="container-fluid">
+          <div class="row drag">
+            <!-- Start: Close --><button
+            class="ventana cerrar"
+            type="button"
+            id="close-btn"
+          ></button>
+          <!-- End: Close -->
+          <!-- Start: Maximize --><button
+            class="ventana maximizar"
+            type="button"
+            id="max-btn"
+          ></button>
+          <!-- End: Maximize -->
+          <!-- Start: Minimize --><button
+            class="ventana minimizar"
+            type="button"
+            id="min-btn"
+          ></button>
+          <!-- End: Minimize -->
+          <h1 class="text-right titulo">Comunicador Serial</h1>
+          </div>
+          <div class="row justify-content-center">
             <div class="col-md-6">
               <div class="card rojo">
                 <div
                   class="card-body"
                   style="background-size: auto; background-position: right"
                 >
-                  <h2 class="text-right card-title" style="font-size: 85px">
-                    COM1
+                  <h2 id="conexionActual" class="text-right card-title">
+                    Desconectado
                   </h2>
-                  <p class="text-right card-text" style="font-size: 15px">
+                  <p class="text-right card-text">
                     Puerto actual
                   </p>
                 </div>
               </div>
               <div class="card violeta">
                 <div class="card-body">
-                  <form>
+                  <form id="portConfig">
                     <div class="form-group row">
                       <label
                         class="col-sm-6 col-form-label"
                         >Nombre del puerto:</label
                       >
                       <!-- Start: Selector --><select
+                        id="nombre"
                         class="form-control col-sm-6"
                       >
                         <optgroup>
-                          <option value="12" selected>COM1</option>
-                          <option value="13">COM2</option>
-                          <option value="14">COM3</option>
+                          <option value="COM1" selected>COM1</option>
+                          <option value="COM2">COM2</option>
+                          <option value="COM3">COM3</option>
                         </optgroup>
                       </select>
                       <!-- End: Selector -->
@@ -49,17 +71,18 @@
                         >Baudios:</label
                       >
                       <!-- Start: Selector2 --><select
+                        id="baudios"
                         class="form-control col-sm-6"
                       >
                         <optgroup>
-                          <option value="12" selected>4800</option>
-                          <option value="13">9600</option>
-                          <option value="14">14400</option>
-                          <option value="15">19200</option>
-                          <option value="16">38400</option>
-                          <option value="17">56000</option>
-                          <option value="18">57600</option>
-                          <option value="19">115200</option>
+                          <option value="4800" selected>4800</option>
+                          <option value="9600">9600</option>
+                          <option value="14400">14400</option>
+                          <option value="19200">19200</option>
+                          <option value="38400">38400</option>
+                          <option value="56000">56000</option>
+                          <option value="57600">57600</option>
+                          <option value="115200">115200</option>
                         </optgroup>
                       </select>
                       <!-- End: Selector2 -->
@@ -67,14 +90,15 @@
                     <div class="form-group row">
                       <label
                         class="col-sm-6 col-form-label"
-                        >Baudios:</label
+                        >Data size:</label
                       >
                       <!-- Start: Selector3 --><select
+                        id="data-size"
                         class="form-control col-sm-6"
                       >
                         <optgroup>
-                          <option value="12" selected>7</option>
-                          <option value="13">8</option>
+                          <option value="7" selected>7</option>
+                          <option value="8">8</option>
                         </optgroup>
                       </select>
                       <!-- End: Selector3 -->
@@ -85,13 +109,14 @@
                         >Paridad:</label
                       >
                       <!-- Start: Selector4 --><select
+                        id="paridad"
                         class="form-control col-sm-6"
                       >
                         <optgroup>
-                          <option value="12" selected>None</option>
-                          <option value="13">Even</option>
-                          <option value="14">Odd</option>
-                          <option value="15">Mark</option>
+                          <option value="none" selected>None</option>
+                          <option value="even">Even</option>
+                          <option value="odd">Odd</option>
+                          <option value="mark">Mark</option>
                         </optgroup>
                       </select>
                       <!-- End: Selector4 -->
@@ -102,12 +127,13 @@
                         >Handshake:</label
                       >
                       <!-- Start: Selector5 --><select
+                        id="handshake"
                         class="form-control col-sm-6"
                       >
                         <optgroup>
-                          <option value="12" selected>OFF</option>
-                          <option value="13">RTS/CTS</option>
-                          <option value="14">Xon / Xoff</option>
+                          <option value="off" selected>OFF</option>
+                          <option value="rts-cts">RTS/CTS</option>
+                          <option value="xon-xoff">Xon / Xoff</option>
                         </optgroup>
                       </select>
                       <!-- End: Selector5 -->
@@ -118,28 +144,29 @@
                         >Modo:</label
                       >
                       <!-- Start: Selector6 --><select
+                        id="modo"
                         class="form-control col-sm-6"
                       >
                         <optgroup>
-                          <option value="12" selected>Free</option>
-                          <option value="13">PortStore test</option>
-                          <option value="14">Data</option>
-                          <option value="15">Setup</option>
+                          <option value="free" selected>Free</option>
+                          <option value="portstore-test">PortStore test</option>
+                          <option value="data">Data</option>
+                          <option value="setup">Setup</option>
                         </optgroup>
                       </select>
                       <!-- End: Selector6 -->
                     </div>
                     <button
                       id="conectar"
-                      class="btn btn-primary btnConectar"
+                      class="btnConectar"
                       type="submit"
                     >
                       Conectar
                     </button>
+                    <p class="text-right card-text">
+                      Configuración del puerto
+                    </p>
                   </form>
-                  <p class="text-right card-text" style="font-size: 15px">
-                    Configuración del puerto
-                  </p>
                 </div>
               </div>
             </div>
@@ -155,7 +182,7 @@
                     placeholder="<comandos>"
                     readonly=""
                   ></textarea>
-                  <p class="text-right card-text" style="font-size: 15px">
+                  <p class="text-right card-text">
                     Recibiendo
                   </p>
                 </div>
@@ -165,47 +192,18 @@
                   class="card-body"
                   style="background-size: auto; background-position: right"
                 >
-                  <div class="comandos">
-                    <input
-                      type="text"
-                      placeholder="Ingrese aquí un comando..."
-                      style="font-size: 20px; color: rgb(151, 151, 151)"
-                    /><button
-                      class="btn btn-primary enviarComando"
-                      type="submit"
-                    >
-                      Enviar
-                    </button>
+                <div class="input-group">
+                  <input type="text" class="form-control comandos">
+                  <div class="input-group-append">
+                    <button type="button" class="btn enviarComando">Enviar</button>
                   </div>
-                  <p class="text-right card-text" style="font-size: 15px">
-                    Enviar comandos
-                  </p>
                 </div>
+                <p class="text-right card-text">
+                  Enviar comando
+                </p>
               </div>
             </div>
           </div>
-          <!-- Start: Close --><button
-            class="btn cerrar control"
-            type="button"
-            style="width: 20; padding: 0"
-            id="close-btn"
-          ></button>
-          <!-- End: Close -->
-          <!-- Start: Maximize --><button
-            class="btn maximizar control"
-            type="button"
-            style="width: 20px; padding: 0"
-            id="max-btn"
-          ></button>
-          <!-- End: Maximize -->
-          <!-- Start: Minimize --><button
-            class="btn minimizar control"
-            type="button"
-            style="width: 20px; padding: 0"
-            id="min-btn"
-          ></button>
-          <!-- End: Minimize -->
-          <h1 class="text-right titulo">Comunicador Serial</h1>
         </div>
       </div>
     </div>
