--- a/mainWindow.html
+++ b/mainWindow.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="styles\css\bootstrap.min.css" />
     <link rel="stylesheet" href="styles\css\styles.css" />
+    <script src="https://kit.fontawesome.com/285cbbe9e4.js" crossorigin="anonymous"></script>
     <title>Comunicador Serial</title>
   </head>
   <body>
@@ -51,7 +52,7 @@
                     <div class="form-group row">
                       <label
                         class="col-sm-6 col-form-label"
-                        >Nombre del puerto:</label
+                        >Nombre del puerto: <span><button id="actualizar" class="btn btnActualizar neu1"><i class="fas fa-sync-alt fa-xs"></i></button></span></label
                       >
                       <!-- Start: Selector --><select
                         id="nombre"
